--- a/helmchart/adservice/values.yaml
+++ b/helmchart/adservice/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: adservice:v1
+  repository: gopielumalai/adservice:v1
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
